--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
 
 
     <application
+        android:usesCleartextTraffic="true"
+
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
