--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,6 @@ dependencies {
 
     /// picassa
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.smarteist:autoimageslider:1.4.0'
+
 }
